Fix (probably) the scrolling behaviour on mobile
Fix Mantis #0000204 (I Think)
Could Fix Mantis #0000210 as well

--- a/src/meta/GeneralBundle/Resources/public/css/_variables.scss
+++ b/src/meta/GeneralBundle/Resources/public/css/_variables.scss
@@ -43,6 +43,7 @@ $menu-height: 60px;
 $menu-padding: 10px;
 $menu-item-border-radius: $border-radius;
 $menu-mobile-width: 284px;
+$menu-mobile-width-safe: 304px;
 $_menu-background: #282828;
 $_menu-border: black;
 $_menu-gradient_base: #424242; //48
