--- a/src/meta/GeneralBundle/Resources/public/css/styles/_menubar.scss
+++ b/src/meta/GeneralBundle/Resources/public/css/styles/_menubar.scss
@@ -49,6 +49,8 @@ nav[role=mobile]{
   border-bottom: 1px solid $_menu_border;
   box-shadow: 0 0 3px $_menu-background;
   z-index: 3;
+  position: fixed;
+  top: 0;
 
   display: none;
   @include media($tablet, $mobile) {
@@ -261,11 +263,7 @@ nav[role=mobile]{
     }
 
   }
-  div.announcements {
-    & > div {
 
-    }
-  }
 }
 /* Thanks Chrome : http://stackoverflow.com/questions/13935255/chrome-float-right-resize-bug */
 body > menu > ul.user { float: right; }
@@ -281,7 +279,7 @@ body > menu > ul.user { float: right; }
     position: fixed;
     @include transition (left 300ms ease-in-out, opacity 200ms ease-in-out);
     left: -$menu-mobile-width;
-    max-width: $menu-mobile-width;
+    max-width: $menu-mobile-width-safe;
     bottom: 0;
     margin: 0;
     padding: 0 2px 0 0;
