--- a/src/meta/GeneralBundle/Resources/public/css/styles/_user.scss
+++ b/src/meta/GeneralBundle/Resources/public/css/styles/_user.scss
@@ -16,6 +16,13 @@ ul.content {
   position: absolute;
   right: 40px;
   top: 40px;
+  @include media($mobile) {
+    position: relative;
+    top: 0;
+    right: 0;
+    display: block;
+    @include fill-parent();
+  }
 }
 
 /* ******************************************************************** */
